--- a/index.html
+++ b/index.html
@@ -31,8 +31,19 @@
                     <input type="text" id="api-key-input" placeholder="Enter your TMDb API key">
                     <button id="save-api-key" class="btn btn-primary">Save Key</button>
                 </div>
+                <div class="api-alternatives">
+                    <h3>Alternative Options:</h3>
+                    <div class="alt-option">
+                        <strong>🎬 OMDb API</strong> - Simple email registration
+                        <small>Get key at: <a href="http://www.omdbapi.com/" target="_blank">omdbapi.com</a></small>
+                    </div>
+                    <div class="alt-option">
+                        <strong>📺 TVMaze API</strong> - No registration required!
+                        <small>TV shows only, works immediately</small>
+                    </div>
+                </div>
                 <div class="demo-option">
-                    <p><strong>Don't have an API key?</strong></p>
+                    <p><strong>Just want to test?</strong></p>
                     <button id="demo-mode-btn" class="btn btn-secondary">
                         <i class="fas fa-play"></i> Try Demo Mode
                     </button>
@@ -121,9 +132,18 @@
         <div id="settings-panel" class="settings-panel">
             <h3>Settings</h3>
             <div class="setting-item">
-                <label>API Key:</label>
+                <label>API Provider:</label>
+                <select id="api-provider-select">
+                    <option value="tmdb">TMDb (The Movie Database)</option>
+                    <option value="omdb">OMDb (Open Movie Database)</option>
+                    <option value="tvmaze">TVMaze (TV Shows Only - No Key Required)</option>
+                </select>
+                <div id="api-provider-info" class="api-info"></div>
+            </div>
+            <div class="setting-item">
+                <label for="settings-api-key">API Key:</label>
                 <div class="api-input-group">
-                    <input type="text" id="settings-api-key" placeholder="Your TMDb API key">
+                    <input type="text" id="settings-api-key" placeholder="Your API key">
                     <button id="update-api-key" class="btn btn-primary">Update</button>
                 </div>
             </div>
@@ -134,6 +154,7 @@
     </div>
 
     <script src="demo-data.js"></script>
+    <script src="alternative-apis.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
